# mermaids

./: .gitignore  WORKLOG.md  pyproject.toml
.github/workflows/: deploy.yml
.gsd/: DECISIONS.md  KNOWLEDGE.md  OVERRIDES.md  PROJECT.md  REQUIREMENTS.md  doctor-history.jsonl
.gsd/journal/: 2026-03-24.jsonl
.gsd/milestones/M001/: M001-RESEARCH.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M002/: M002-ROADMAP.md  M002-SUMMARY.md
.gsd/milestones/M003/: M003-ROADMAP.md  M003-SUMMARY.md  M003-VALIDATION.md
.gsd/milestones/M004/: M004-CONTEXT.md  M004-ROADMAP.md  M004-SUMMARY.md  M004-VALIDATION.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
frontend/: CNAME  index.html  review.html
frontend/css/: style.css
frontend/js/: app.js  coloring.js  dressup.js  floodfill.js  sparkle.js  touch.js
scripts/: assemble_mermaid.py  generate_coloring.py  generate_coloring_placeholders.py  generate_dressup.py  generate_dressup_outlines.py  run_pipeline.py  trace_all.py
src/mermaids/: app.py
tests/: conftest.py  test_app.py  test_assemble.py  test_coloring.py  test_dressup.py  test_e2e.py  test_floodfill_unit.py  test_generate.py  test_masks.py  test_pipeline.py  test_trace_coloring.py
(+157 files in other folders)
