[project]
name = "mermaids"
version = "0.1.0"
description = "Mermaid Create & Play - A creative activity app for kids"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "vtracer>=0.6.12",
    "pillow>=11",
    "openai>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "playwright>=1.49",
    "pytest-playwright>=0.6",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mermaids"]

[tool.pytest.ini_options]
testpaths = ["tests"]
